--- a/JD_Siren_WebApp_Fresh_With_CSS/templates/index.html
+++ b/JD_Siren_WebApp_Fresh_With_CSS/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>FiveM Siren ID Finder</title>
-    <link rel="stylesheet" href="/static/style.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h1>FiveM Siren ID Finder</h1>
